FIrst Half Commit

--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -6,6 +6,20 @@
   <title>Luis Gomez's LabAAAAAAA</title>
 </head>
 <body>
+  <h1>
+    Luis Gomez's Labs for INST 377
+  </h1>
+  <h2>
+    Album Names
+  </h2>
+  <ol>List ITEM 1</ol>
+  <ol>List ITEM 2</ol>
+  <ol>List ITEM 3</ol>
+  <ol>List ITEM 4</ol>
+
+  <h1>
+    Image carousel
+  </h1>
   
 </body>
 </html>
@@ -24,5 +38,3 @@ full-width wrapper div
           div to contain a description or text
             description of images
 
-
-full-width page footer containing your github account name and a link to your gitHub account
