Added Images to Main

--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -20,7 +20,12 @@
   <h1>
     Image carousel
   </h1>
-  
+  <div>
+    <p>
+      Something
+    </p>
+    <img src="mochi.png" width="500" height="600">
+  </div>
 </body>
 </html>
 
