--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -21,11 +21,14 @@
     Image carousel
   </h1>
   <div>
-    <p>
-      Something
-    </p>
-    <img src="mochi.png" width="500" height="600">
-  </div>
+      <img src="./images/mochi.gif" width="150" height="150">
+      <img src="./images/mochi.jpg" width="150" height="150">
+      <img src="./images/mochi.png" width="100" height="100"> 
+      <img src="./images/mochi.svg" width="150" height="150">
+   </div>
+   <div>
+    
+   </div>
 </body>
 </html>
 
