--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -9,40 +10,34 @@
   <h1>
     Luis Gomez's Labs for INST 377
   </h1>
+  <div>
   <h2>
     Album Names
   </h2>
-  <ol>List ITEM 1</ol>
-  <ol>List ITEM 2</ol>
-  <ol>List ITEM 3</ol>
-  <ol>List ITEM 4</ol>
-
+  <ol>
+    <li>Reol - No Title- </li>
+    <li>EmoCosine - Love Kils U</li>
+    <li>Puppet - New York Family</li>
+    <li>MYTH & ROID - eYe's</li>
+    <li>Avicii - Stories</li>
+  </ol>
+  
+  </div>
   <h1>
     Image carousel
   </h1>
   <div>
-      <img src="./images/mochi.gif" width="150" height="150">
-      <img src="./images/mochi.jpg" width="150" height="150">
-      <img src="./images/mochi.png" width="100" height="100"> 
-      <img src="./images/mochi.svg" width="150" height="150">
+      <img src="./images/mochi.gif" alt="This is a GIF" width="150" height="150">
+      <img src="./images/mochi.jpg" alt="This is a JPEG" width="150" height="150">
+      <img src="./images/mochi.png" alt="This is a PNG" width="100" height="100"> 
+      <img src="./images/mochi.svg" alt="This is a SVG" width="150" height="150">
    </div>
    <div>
-    
+    <p>
+      Above are images of 4 varying file types, GIF, JPG, PNG, and SVG respectively. Each one has different functionality, such as allowing visual movement in images (GIFS), containing the highest quality of images (JPEG), allowing for transparent backgrounds (PNG), and allowing for infinitely scale without distortion (SVG)
+    </p>
+    <p> LGomez101 <a href="https://github.com/lgomez101"> Visit my Github</a></p>
    </div>
 </body>
 </html>
-
-
-full-width wrapper div
-  header containing: YOUR NAME's Labs For INST377
-  container div
-      left div
-        sub-header saying "albums"
-        Your top 5 albums in an ordered list
-      right div (main div for the site)
-        sub-header saying "image carousel"
-          div to contain four images
-            four images of mochi from your readings, all square (they're four different image types!)
-          div to contain a description or text
-            description of images
 
