--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -16,7 +16,7 @@
   </h2>
   <ol>
     <li>Reol - No Title- </li>
-    <li>EmoCosine - Love Kils U</li>
+    <li>EmoCosine - Love Kills U</li>
     <li>Puppet - New York Family</li>
     <li>MYTH & ROID - eYe's</li>
     <li>Avicii - Stories</li>
