--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<HTML LANG="EN">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,37 +7,36 @@
   <title>Luis Gomez's Lab</title>
 </head>
 <body>
-  <h1>
-    Luis Gomez's Labs for INST 377
-  </h1>
   <div>
-  <h2>
-    Album Names
-  </h2>
-  <ol>
-    <li>Reol - No Title- </li>
-    <li>EmoCosine - Love Kills U</li>
-    <li>Puppet - New York Family</li>
-    <li>MYTH & ROID - eYe's</li>
-    <li>Avicii - Stories</li>
-  </ol>
-  
+    <h1>Luis Gomez's Labs for INST 377</h1>
+    <div>
+      <div>
+        <h2>Album Names</h2>
+        <ol>
+          <li>Reol - No Title-</li>
+          <li>EmoCosine - Love Kills U</li>
+          <li>Puppet - New York Family</li>
+          <li>MYTH & ROID - eYe's</li>
+          <li>Avicii - Stories</li>
+        </ol>
+      </div>
+      <div>
+        <h2>Image carousel</h2>
+        <div>
+          <img src="./images/mochi.gif" alt="This is a GIF" width="150" height="150">
+          <img src="./images/mochi.jpg" alt="This is a JPEG" width="150" height="150">
+          <img src="./images/mochi.png" alt="This is a PNG" width="100" height="100"> 
+          <img src="./images/mochi.svg" alt="This is a SVG" width="150" height="150">
+          <div>
+          <p>Above are images of 4 varying file types, GIF, JPG, PNG, and SVG respectively. Each one has different functionality, such as allowing visual movement in images (GIFS), containing the highest quality of images (JPEG), allowing for transparent backgrounds (PNG), and allowing for infinitely scale without distortion (SVG)
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-  <h1>
-    Image carousel
-  </h1>
-  <div>
-      <img src="./images/mochi.gif" alt="This is a GIF" width="150" height="150">
-      <img src="./images/mochi.jpg" alt="This is a JPEG" width="150" height="150">
-      <img src="./images/mochi.png" alt="This is a PNG" width="100" height="100"> 
-      <img src="./images/mochi.svg" alt="This is a SVG" width="150" height="150">
-   </div>
-   <div>
-    <p>
-      Above are images of 4 varying file types, GIF, JPG, PNG, and SVG respectively. Each one has different functionality, such as allowing visual movement in images (GIFS), containing the highest quality of images (JPEG), allowing for transparent backgrounds (PNG), and allowing for infinitely scale without distortion (SVG)
-    </p>
-    <p> LGomez101 <a href="https://github.com/lgomez101"> Visit my Github</a></p>
-   </div>
+  <footer>
+    <p>LGomez101 <a href="https://github.com/lgomez101">Visit my Github</a></p>
+  </footer>
 </body>
-</html>
+</HTML>
 
