Lab2 Final cleanup

--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<HTML LANG="EN">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,43 +8,37 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="wrapper">    
-<div class="header"> 
-  <h1>
-    Luis Gomez's Labs for INST 377
-  </h1>
-  </div>
-  <div class='container'>
-  <div class='left_section box'>
-  <h2>
-    Album Names
-  </h2>
-  <ol class="box">
-    <li>Reol - No Title- </li>
-    <li>EmoCosine - Love Kills U</li>
-    <li>Puppet - New York Family</li>
-    <li>MYTH & ROID - eYe's</li>
-    <li>Avicii - Stories</li>
-  </ol>
-  
-  </div>
-  <div class="right_section box">
-  <h1>
-    Image carousel
-  </h1>
-    <div class="grid">
-      <img src="./images/mochi.gif" alt="This is a GIF" width="150" height="150">
-      <img src="./images/mochi.jpg" alt="This is a JPEG" width="150" height="150">
-      <img src="./images/mochi.png" alt="This is a PNG" width="100" height="100"> 
-      <img src="./images/mochi.svg" alt="This is a SVG" width="150" height="150">
-   
+  <div class="header">
+    <h1>Luis Gomez's Labs for INST 377</h1>
+    <div class="container">
+      <div class="left_section box">
+        <h2>Album Names</h2>
+        <ol class="box">
+          <li>Reol - No Title-</li>
+          <li>EmoCosine - Love Kills U</li>
+          <li>Puppet - New York Family</li>
+          <li>MYTH & ROID - eYe's</li>
+          <li>Avicii - Stories</li>
+        </ol>
+      </div>
+      <div class="right_section box">
+        <h2>Image carousel</h2>
+        <div class="grid">
+          <img src="./images/mochi.gif" alt="This is a GIF" width="150" height="150">
+          <img src="./images/mochi.jpg" alt="This is a JPEG" width="150" height="150">
+          <img src="./images/mochi.png" alt="This is a PNG" width="100" height="100"> 
+          <img src="./images/mochi.svg" alt="This is a SVG" width="150" height="150">
+        </div>
+        <div class="box">
+          <p>Above are images of 4 varying file types, GIF, JPG, PNG, and SVG respectively. Each one has different functionality, such as allowing visual movement in images (GIFS), containing the highest quality of images (JPEG), allowing for transparent backgrounds (PNG), and allowing for infinitely scale without distortion (SVG)
+        </div>
+        </div>
+      </div>
     </div>
-    <p class="box">
-      Above are images of 4 varying file types, GIF, JPG, PNG, and SVG respectively. Each one has different functionality, such as allowing visual movement in images (GIFS), containing the highest quality of images (JPEG), allowing for transparent backgrounds (PNG), and allowing for infinitely scale without distortion (SVG)
-    </p>
-    </div>
-</div>
-<div class='footer'><p> LGomez101 <a href="https://github.com/lgomez101"> Visit my Github</a></p>
-</div>
+  </div>
+  <footer class="footer">
+    <p>LGomez101 <a href="https://github.com/lgomez101">Visit my Github</a></p>
+  </footer>
 </body>
-</html>
+</HTML>
+
