--- a/client/lab_3/index.html
+++ b/client/lab_3/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Luis Gomez's Lab</title>
   <link rel="stylesheet" href="style.css">
-  
+  <script type="text/javascript" src="script.js"></script>
 </head>
 <body>
 
@@ -51,7 +51,7 @@
   <footer class="footer">
     <p>LGomez101 <a href="https://github.com/lgomez101">Visit my Github</a></p>
   </footer>
-<script src="script.js"></script>
+
 </body>
 </HTML>
 
