--- a/client/lab_4/index.html
+++ b/client/lab_4/index.html
@@ -1,3 +1,45 @@
+<!DOCTYPE html>
+<HTML LANG="EN">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Luis Gomez's Lab</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="header">
+    <h1>Luis Gomez's Labs for INST 377</h1>
+    <div class="container">
+      <div class="left_section box">
+        
+            <h2>Restaurant Names</h2>
+            <div class="box">
+            <form action="FILL THIS LATER">
+                <label for='Rname'>Res Name:</label>
+                <input type="text" id="resto">
+        
+            </form>
+            <button type="button">Submit</button>
+        </div>
+      </div>
+      <div class="right_section box">
+        <h2>Local Res</h2>
+        <div class="box">
+          <p>List of Local Res</p>
+        </div>
+        </div>
+      </div>
+</div>
+<div class="footer">
+  <footer>
+    <p>LGomez101 <a href="https://github.com/lgomez101">Visit my Github</a></p>
+  </footer>
+</div>
+</body>
+</HTML>
+
+
 <!-- Bring in your successful HTML/CSS from the Flexbox lab -->
 <!-- Try typing 'doc' at the top of this file and pressing "tab" -->
 <!-- if your development environment is set up correctly -->
