--- a/client/lab_6/index.html
+++ b/client/lab_6/index.html
@@ -1,3 +1,51 @@
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Luis Gomez Lab 6 INST 377</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="wrapper">
+      <header class="header">
+        <h1>Luis Gomez Lab 6 INST 377</h1>
+      </header>
+      <div class="container">
+        <div class="left_section box">
+          <h3>Form Input</h3>
+          <div class="box">
+          <form action="https://data.princegeorgescountymd.gov/resource/umjn-t2iz.json" class="main_form">
+            <label for="resto">Restaurant Name</label>
+            <input type="text" id="resto" name="resto"/>
+            <button type="submit" id="get-resto">Submit</button>
+            <div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div>
+          </form>
+        </div>
+        </div>
+        <div class="right_section box">
+          <h3>Local Res</h3>
+          <div class="restaurant_list box" id="restaurant_list">A list of local res</div>
+        </div>
+      </div>
+      <div class="footer">
+      <footer>
+        <h2>LGomez101 <a href="https://github.com/lgomez101">Visit my Github</a></h2>
+      </footer>
+      </div>
+    </div>
+    <script src="./script.js"></script>
+  </body>
+</html>
+
+<!-- Bring in your successful HTML/CSS from the Flexbox lab -->
+<!-- Your page will need a form in it with an 'action' to /api and a single text field with an id/name of "resto" -->
+<!-- If you open /routes/apiRoutes and go to line 38 you will find the server side answer to your request! -->
+
+<!-- Temporarily unhook your script.js file from your main index file -->
+
+
+
 <!--
     This is how to build the CSS-only load animation from loading.io    
     <div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div>
