Lab5 Lab 6 Fix FINAL

--- a/client/lab_5/index.html
+++ b/client/lab_5/index.html
@@ -14,13 +14,16 @@
       <div class="container">
         <div class="left_section box">
           <h3>Form Input</h3>
-          <div class="box">
+          <div class="box buttons">
+
           <form action="https://data.princegeorgescountymd.gov/resource/umjn-t2iz.json" class="main_form">
+            <button type="submit">Load Data</button>
             <label for="resto">Restaurant Name</label>
             <input type="text" id="resto" name="resto"/>
-            <button type="submit">Load Data</button>
+           
             <button type="button" class="filter_button">Filter Data</button>
           </form>
+
         </div>
         </div>
         <div class="right_section box">
